discussion/kv_engine/175497/175497_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-52383: Ensure we yield correctly when loading data during warmup

Problem:
During analysis of our warmup code we observed that
WarmupVbucketVisitor's callback was never yielding thus causing us to
disregard max time splice it should spend backfilling before running
another reader thread task. This behaviour can use delta rebalance to
time out as large data buckets can block smaller buckets from warming up
in a timely manner, see MB-47267 for more information.

Cause:
This was due to WarmupVbucketVisitor::visit() not correctly updating the
state of LoadStorageKVPairCallback when calling
LoadStorageKVPairCallback::updateDeadLine(). This was due to us storing
the LoadStorageKVPairCallback as kvCallback using the 'auto' keyword
rather than an 'auto&'. This caused deep copy to occur and us to call
updateDeadLine() on the copied value. Meaning the
LoadStorageKVPairCallback used for the backfill had a deadline of
std::chrono::steady_clock::time_point::max(), so it could run for as
long as it needed without yielding.

This should have been picked up by the test
test_reader_thread_starvation_warmup() in ep_testsuite.cc. However, the
test was broken due to the 'num_reader_threads' not being set to 1 by
the config argument correctly. When we did set the number of reader
threads correctly the test deadlocks showing it never excited the code
correctly and so would never have found this bug.

Fix:
To fix this change 'kvCallback' in  WarmupVbucketVisitor::visit() to be
an 'auto&' rather than just an 'auto'.

Also more ensure fix the test to defend this code correctly. To do this
we've modified the vistWarmupHook so that it now records how many times
it's been called so that we can ensure that on the 'slowBucket' we do
yield. This can be identified if the vistWarmupHook gets called more
than 2 times, as this is the minimum number of time it will be called.
Also to ensure we do yield if we've be called more than two times then
sleep for 9ms to we only have 1ms to warmup itmes in.

Change-Id: I26820d7361fc4d32dc4daba907469c6a18903d73

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-05-31 12:25:13.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-05-31 12:25:24.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

http://server.jenkins.couchbase.com/job/restricted-branch-check/300773/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-31 12:46:29.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/338/ : FAILURE

Compile error at [2022-05-31T12:39:33.005Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:42:10:
fatal error: "executor/executorpool.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/338/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/339/ : FAILURE

Compile error at [2022-05-31T12:40:36.391Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:42:10:
fatal error: "executor/executorpool.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/339/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/327/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/engines/ep/tests/ep_testsuite.cc:42:10:
fatal error: "executor/executorpool.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/327/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/321/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/ep_testsuite.cc:42:10: error: "executor/executorpool.h" file not found [clang-diagnostic-error]
#include <executor/executorpool.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/321/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/tests/ep_testsuite.cc:42:10:
error: "executor/executorpool.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/321/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/475/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\ep_testsuite.cc(42): fatal error C1083: Cannot open include file: "executor/executorpool.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/475/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/330/ : FAILURE

Compile error at [2022-05-31T12:45:56.640Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:42:10:
fatal error: executor/executorpool.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/330/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/253/ : FAILURE

Compile error at [2022-05-31T12:38:23.927Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:42:10:
fatal error: executor/executorpool.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/cheshire-cat/253/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/335/ : FAILURE

Compile error at [2022-05-31T12:38:04.297Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:42:10:
fatal error: executor/executorpool.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/335/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/347/ : FAILURE

Compile error at [2022-05-31T12:42:07.219Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:42:10:
fatal error: "executor/executorpool.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/347/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16901/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
